ui/weather-api/index.css
:host {
	--weather-api-bdc: color-mix(in srgb, currentColor, 80% transparent);
	/* --weather-api-bdrs: .66em; */
	--weather-api-bdw: 1px;
	--weather-api-light-text: color-mix(in srgb, currentColor, 30% transparent);
	--weather-api-p: 1rem;

	--weather-api-widget-bg: light-dark(hsl(210, 55%, 45%), hsl(235, 30%, 22%)); /*  hsl(210, 35%, 25%) */
	--weather-api-widget-c: light-dark(hsl(210, 100%, 95%), hsl(210, 95%, 90%));

	container-type: inline-size;
	display: grid;
	font-family: var(--weather-api-ff, ui-sans-serif, system-ui);
	font-size: var(--weather-api-fs, .75rem);
	gap: var(--weather-api-g, 1em);
}

:host * {
	box-sizing: border-box;
}

h2, h3, h4, p {
	margin: unset;
	text-box: text;
}

/* === Widgets === */
:host::part(widget) {
	/* align-content: start; */
	background: var(--weather-api-widget-bg);
	background-position: var(--weather-api-widget-bgp, center);
	background-size: var(--weather-api-widget-bgsz, cover);
	border-radius: var(--weather-api-bdrs, 1rem);
	color: var(--weather-api-widget-c);
	display: grid;
	height: 100%;
	padding: var(--weather-api-p);
	row-gap: var(--weather-api-widget-rg, .5ch);
}
:host::part(icon) {
	fill: none;
	height: 1.25em;
	pointer-events: none;
	stroke: currentColor;
	stroke-width: 1.25;
	width: 1.25em;
}


:host::part(list) {
	all: unset;
	align-self: center;
}
:host::part(list-item) {
	border-block-start: var(--weather-api-bdw) solid var(--weather-api-bdc);
	display: flex;
	justify-content: space-between;
	padding-block: var(--weather-api-wind-item-p, calc(var(--weather-api-p) / 2));
}
:host::part(list-item-key) {
	font-weight: var(--weather-api-wind-item-key-fw, 500);
}
:host::part(list-item-value) {
	color: var(--weather-api-wind-item-value-color, var(--weather-api-light-text));
}
[part~=list] li:first-of-type {
	border: 0;
}
/* :host::part(widget-sm) {
	align-items: start;
	grid-template-rows: auto 1fr auto;
	height: 100%;
} */
:host::part(title) {
	align-items: center;
	border-block-end: var(--weather-api-bdw) solid var(--weather-api-bdc);
	display: flex;
	font-size: var(--weather-api-title-fs, 120%);
	font-weight: var(--weather-api-title-fw, 500);
	gap: .25ch;
	margin-block-end: calc(var(--weather-api-p) / 2);
	padding-block-end: calc(var(--weather-api-p) / 2);
	text-wrap: nowrap;
	text-overflow: ellipsis;
}
:host::part(header-xl) {
	font-size: var(--weather-api-header-xl-fs, clamp(1.625rem, 6.5cqi, 6.5rem));
	font-weight: var(--weather-api-header-xl-fw, 300);
}
:host::part(header-lg) {
	font-size: var(--weather-api-header-lg-fs, clamp(1.25rem, 4cqi, 4rem));
	font-weight: var(--weather-api-header-lg-fw, 300);
}
:host::part(header-md) {
	font-size: var(--weather-api-header-md-fs, clamp(1rem, 2cqi, 2rem));
	font-weight: var(--weather-api-header-md-fw, 300);
}
:host::part(light-text) {
	color: var(--weather-api-light-text);
}
:host::part(condition-icon) {
	width: var(--weather-api-condition-icon-w, clamp(2rem, 10cqi, 4rem));
}

/* === GENERIC WEATHER WIDGET === */
weather-widget {
	container-type: inline-size;
}
















/*== FORECAST DAYS WIDGET ===*/
:host::part(forecast-days-widget) {
	container-name: forecast-days-widget;
}
:host::part(forecast-days) {
	padding-block-end: 0;
}
:host::part(forecast-days-list) {
	column-gap: var(--weather-api-forecast-days-gap, 1ch);
	container-type: inline-size;
	display: grid;
	grid-template-columns: auto 2fr 1fr 1fr;
	margin: 0;
	padding: 0;
}
:host::part(forecast-day) {
	align-items: center;
	border-style: solid;
	border-width: var(--weather-api-bdw) 0 0 0;
	border-color: var(--weather-api-bdc);
	display: grid;
	grid-column: span 4;
	grid-template-columns: subgrid;
	padding-block: var(--weather-api-forecast-day-p, .5ch);
}
:host::part(forecast-day-icon) {
	place-self: center;
}
:host::part(forecast-day-name),
:host::part(forecast-day-temp) {
	font-weight: var(--weather-api-day-fw, 500);
}
:host::part(forecast-day-temp),
:host::part(forecast-day-night-temp) {
	text-align: end;
}
[part~=forecast-days-list] li:first-of-type {
	border: 0;
}
@container forecast-days-widget (width > 500px) {
	:host::part(forecast-days-list) {
		grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
		padding-block: var(--weather-api-p);
	}
	:host::part(forecast-day) {
		border-width: 0 0 0 var(--weather-api-bdw);
		display: grid;
		grid-column: unset;
		justify-items: center;
		row-gap: var(--weather-api-widget-rg, .5ch);
	}
}

/* === FORECAST HOURS WIDGET === */
:host::part(forecast-hours-widget) {
	container-name: forecast-hours-widget;
}
:host::part(forecast-hours) {
	overflow: auto clip;
	scrollbar-color: #0001 #0000;
	scrollbar-width: thin;
	user-select: none;
}
:host::part(forecast-hours-scroll) {
	column-gap: var(--weather-api-forecast-hours-gap, 1ch);
	display: flex;
	margin: 0;
	padding: 0;
}
:host::part(forecast-hour-item) {
	display: grid;
	place-items: center;
}
:host::part(forecast-hour-time) {
	color: var(--weather-api-hour-color, var(--weather-api-light-text));
}
:host::part(forecast-hour-temp) {
	font-weight: var(--weather-api-hour-temp-fw, 500);
}

/* === MOON PHASE WIDGET === */
:host::part(moonphase-widget) {
	container-name: moonphase-widget;
}
moon-phase {
	--moon-phase-mask-bg: var(--weather-api-widget-bg);
	--moon-phase-mask-opacity: 0.85;
	--moon-phase-blur: 3px;
	--moon-phase-filter: grayscale(.5) brightness(1.05);
	margin: 0 auto;
	max-width: 200px;
}
@container moonphase-widget (width > 400px) {
	:host::part(moonphase-wrapper) {
		display: grid;
		grid-template-columns: 1fr 1fr;
	}
	moon-phase {
		min-width: 150px;
	}
}

/* === OVERVIEW WIDGET === */
:host::part(overview-widget) {
	container-name: overview-widget;
}
:host::part(overview-list) {
	display: none;
}
@container overview-widget (width > 300px) {
	:host::part(widget) {
		grid-template-columns: 1fr auto;
	}
	:host::part(overview-list) {
		display: grid;
		list-style-type: none;
		margin: 0;
		padding: 0;
	}
	:host::part(header-xl),
	:host::part(overview-highlow) {
		text-align: end;
	}
	:host::part(condition-icon) {
		place-self: end; 
	}
}

/* === PRECIPITATION WIDGET === */
:host::part(precipitation-widget) {
	container-name: precipitation-widget;
}
:host::part(graph-precipitation) {
	display: none;
}
@container precipitation-widget (width > 400px) {
	:host::part(header-lg) {
		display: none;
	}
	:host::part(graph-precipitation) {
		display: block;
	}
}

/*=== PRESSURE WIDGET ===*/
:host::part(pressure-widget) {
	container-name: pressure-widget;
}
analog-gauge {
	--analog-gauge-needle-bg: currentColor;
	--analog-gauge-segments: 10;
	margin: 0 auto;
	max-width: 300px;
}

/* === SUN PHASE WIDGET === */
sun-phase {
	--sun-phase-bdrs: .5rem;
	margin-block: 1ch;
}

/* === TEMPERATURE WIDGET === */
:host::part(temperature-widget) {
	container-name: temperature-widget;
}
:host::part(graph-temperature) {
	display: none;
}
@container temperature-widget (width > 400px) {
	:host::part(header-lg) {
		display: none;
	}
	:host::part(graph-temperature) {
		display: block;
	}
}

/* === UV WIDGET === */
:host::part(uv-widget) {
	container-name: uv-widget;
}
:host::part(uv-slider) {
	align-items: center;
	background: linear-gradient(to right, #55AF33, #A0C61B, #F7E98E, #F6E301, #FAB60D, #F88D2F, #F76D00, #E53015, #D90E21, #D80010, #8A4F9E);
	border-radius: 1ch;
	display: flex;
	height: 1ch;
	margin-block-start: var(--weather-api-p);
	position: relative;
	width: 100%;
}
output[part="uv-slider"]::after {
	aspect-ratio: 1;
	background-color: rgba(255,255,255,.8);
	border: 2px solid var(--weather-api-widget-bg);
	border-radius: 50%;
	box-sizing: border-box;
	content: "";
	display: block;
	inset-inline-start: var(--_p, 0%);
	position: absolute;
	width: 1.25ch;
}

/* === WIND WIDGET	=== */
:host::part(wind-widget) {
	container-name: wind-widget;
}
:host::part(wind) {
	container-type: inline-size;
}
:host::part(wind-wrapper) {
	column-gap: var(--weather-api-wind-gap, 2ch);
	display: grid;
}
nav-compass {
	--nav-compass-bg: var(--weather-api-widget-bg);
	--nav-compass-c: var(--weather-api-widget-c);
	margin: 0 auto;
	max-width: 300px;
}
@container wind-widget (width > 400px) {
	:host::part(wind-wrapper) {
		grid-template-columns: 1fr 1fr;
	}
}









 :host::part(graph-bar) {
	fill: var(--weather-api-graph-bar, var(--weather-api-light-text));
 }
 :host::part(graph-text-bottom),
 :host::part(graph-text-top) {
	fill: var(--weather-api-graph-hour-color, var(--weather-api-light-text));
	font-family: inherit;
	font-size: var(--weather-api-graph-hour-fs, 6px);
	text-anchor: middle;
	stroke: none;
	stroke-width: 0;
}
:host::part(graph-text-top) {
	font-size: var(--weather-api-text-top-fs, 6px);
	letter-spacing: -0.05em;
}
:host::part(graph-temperature) {
	--weather-api-graph-bar: #FFF5CC;
	/* #FFCC00 */
}

